feat: enhance uploadImageUrl method to validate URL input, improve error handling, and streamline image retrieval process