@@ -1,11 +1,18 @@
 package com.dev.backend.service.impl;
 
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.cloudinary.Cloudinary;
@@ -18,6 +25,9 @@ import jakarta.annotation.PostConstruct;
 
 @Service
 public class CloudinaryServiceImpl implements CloudinaryService {
+
+    // Đường dẫn ảnh mặc định khi không tìm thấy hoặc lỗi hệ thống bên thứ ba
+    private static final String DEFAULT_AVATAR_URL = "https://ui-avatars.com/api/?name=Kh%C3%A1c&background=random&color=fff&size=128";
 
     @Value("${cloudinary.cloud-name}")
     private String cloudName;
@@ -71,15 +81,45 @@ public class CloudinaryServiceImpl implements CloudinaryService {
 
     @Override
     public String uploadImageUrl(String imageUrl) {
+        if (imageUrl == null || imageUrl.isBlank()) {
+            throw new IllegalArgumentException("Đường dẫn URL không được để trống");
+        }
+
+        String cleanedUrl = imageUrl.strip();
+
+        // Nếu ảnh đã thuộc hệ thống Cloudinary của bạn rồi thì giữ nguyên
+        if (cleanedUrl.contains("res.cloudinary.com/" + cloudName)) {
+            return cleanedUrl;
+        }
+
         try {
-            if (imageUrl == null || imageUrl.strip().isEmpty()) {
-                throw new IllegalArgumentException("Đường dẫn URL không được để trống");
+            RestTemplate restTemplate = new RestTemplate();
+            HttpHeaders headers = new HttpHeaders();
+            headers.set("User-Agent",
+                    "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36");
+
+            HttpEntity<String> entity = new HttpEntity<>(headers);
+
+            URI uri = URI.create(cleanedUrl);
+
+            ResponseEntity<byte[]> response = restTemplate.exchange(
+                    uri, // Truyền đối tượng URI vào đây thay vì cleanedUrl kiểu String
+                    HttpMethod.GET,
+                    entity,
+                    byte[].class);
+
+            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
+                return this.uploadImage(response.getBody());
             }
-            return (String) cloudinary.uploader()
-                    .upload(imageUrl.strip(), ObjectUtils.emptyMap())
-                    .get("secure_url");
+
+            throw new RuntimeException("Phản hồi từ máy chủ chứa ảnh không hợp lệ: " + response.getStatusCode());
+
         } catch (Exception e) {
-            throw new RuntimeException("Upload ảnh từ URL thất bại: " + e.getMessage(), e);
+          
+            System.err.println("Mã lỗi upload ảnh từ URL: " + cleanedUrl + " -> " + e.getMessage());
+
+          
+            return DEFAULT_AVATAR_URL;
         }
     }
 
@@ -88,10 +128,10 @@ public class CloudinaryServiceImpl implements CloudinaryService {
         String urlImage;
         if (file != null && !file.isEmpty()) {
             urlImage = uploadImage(file);
-        } else if (imageUrl != null && !imageUrl.trim().isEmpty()) {
-            urlImage = uploadImageUrl(imageUrl.trim());
+        } else if (imageUrl != null && !imageUrl.isBlank()) {
+            urlImage = uploadImageUrl(imageUrl);
         } else {
-            urlImage = "https://ui-avatars.com/api/?name=Kh%C3%A1c&background=random&color=fff&size=128";
+            urlImage = DEFAULT_AVATAR_URL;
         }
 
         return Map.of("urlImage", urlImage);
@@ -109,7 +149,7 @@ public class CloudinaryServiceImpl implements CloudinaryService {
             String finalUrl = req.url();
             if (req.file() != null && !req.file().isEmpty()) {
                 finalUrl = this.uploadImage(req.file());
-            } else if (finalUrl != null && !finalUrl.strip().isEmpty()) {
+            } else if (finalUrl != null && !finalUrl.isBlank()) {
                 String trimmedUrl = finalUrl.strip();
 
                 if (!trimmedUrl.contains("res.cloudinary.com/" + cloudName)) {
